# llm_zoomcamp

./: README.md
01.1-rag/: README.md  ingest.py  main.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag.ipynb  rag_helper.py
01.2-agents/: .gitignore  agents.ipynb  pyproject.toml
01.3-homework/: homework.ipynb  main.py  pyproject.toml  rag_helper.py
02-vector-search/: .gitignore  pyproject.toml  vector_search.ipynb  vector_search_pgvector.ipynb
02.1-vector-search/: vector_search_persistent.ipynb
02.2-onnx-embedder/: onnx.ipynb  pyproject.toml
02.3-homework/: homework.ipynb  pyproject.toml
